--- a/Ads/app/templates/register.html
+++ b/Ads/app/templates/register.html
@@ -1,53 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>Ani's Ads</title>
-    <link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="lib/bootstrap/bootstrapSandstone.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/app.css" />
-</head>
-<body ng-app='ads' ng-controller="MainController">
-    <div class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="../" class="navbar-brand">Ani's Ads</a>
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="navbar-collapse collapse" id="navbar-main">
-            <ul class="nav navbar-nav">            
-                <li>
-                    <a href="#">Login</a>
-                </li>
-                <li>
-                    <a href="#">Register</a>
-                </li>
-                <li>
-                    <a href="#" id="download">Download</a>             
-            </ul>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-       <div class="bs-docs-section">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="page-header">
-              <h1 id="forms">Forms</h1>
-            </div>
-          </div>
-        </div>
+<div class="bs-docs-section">
+       
 
         <div class="row">
           <div class="col-lg-6">
             <div class="well bs-component">
               <form class="form-horizontal">
                 <fieldset>
-                  <legend>Legend</legend>
+                  <legend>User Registration</legend>
                   <div class="form-group">
                     <label for="inputEmail" class="col-lg-2 control-label">Email</label>
                     <div class="col-lg-10">
@@ -58,49 +17,15 @@
                     <label for="inputPassword" class="col-lg-2 control-label">Password</label>
                     <div class="col-lg-10">
                       <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                      <div class="checkbox">
-                        <label>
-                          <input type="checkbox"> Checkbox
-                        </label>
-                      </div>
+                  
                     </div>
                   </div>
-                  <div class="form-group">
-                    <label for="textArea" class="col-lg-2 control-label">Textarea</label>
-                    <div class="col-lg-10">
-                      <textarea class="form-control" rows="3" id="textArea"></textarea>
-                      <span class="help-block">A longer block of help text that breaks onto a new line and may extend beyond one line.</span>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-lg-2 control-label">Radios</label>
-                    <div class="col-lg-10">
-                      <div class="radio">
-                        <label>
-                          <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                          Option one is this
-                        </label>
-                      </div>
-                      <div class="radio">
-                        <label>
-                          <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                          Option two can be something else
-                        </label>
-                      </div>
-                    </div>
-                  </div>
+               
+             
                   <div class="form-group">
                     <label for="select" class="col-lg-2 control-label">Selects</label>
                     <div class="col-lg-10">
                       <select class="form-control" id="select">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                      </select>
-                      <br>
-                      <select multiple="" class="form-control">
                         <option>1</option>
                         <option>2</option>
                         <option>3</option>
@@ -119,76 +44,9 @@
               </form>
             <div id="source-button" class="btn btn-primary btn-xs" style="display: block;">&lt; &gt;</div></div>
           </div>
-          <div class="col-lg-4 col-lg-offset-1">
-
-              <form class="bs-component">
-                <div class="form-group">
-                  <label class="control-label" for="focusedInput">Focused input</label>
-                  <input class="form-control" id="focusedInput" type="text" value="This is focused...">
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label" for="disabledInput">Disabled input</label>
-                  <input class="form-control" id="disabledInput" type="text" placeholder="Disabled input here..." disabled="">
-                </div>
-
-                <div class="form-group has-warning">
-                  <label class="control-label" for="inputWarning">Input warning</label>
-                  <input type="text" class="form-control" id="inputWarning">
-                </div>
-
-                <div class="form-group has-error">
-                  <label class="control-label" for="inputError">Input error</label>
-                  <input type="text" class="form-control" id="inputError">
-                </div>
-
-                <div class="form-group has-success">
-                  <label class="control-label" for="inputSuccess">Input success</label>
-                  <input type="text" class="form-control" id="inputSuccess">
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label" for="inputLarge">Large input</label>
-                  <input class="form-control input-lg" type="text" id="inputLarge">
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label" for="inputDefault">Default input</label>
-                  <input type="text" class="form-control" id="inputDefault">
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label" for="inputSmall">Small input</label>
-                  <input class="form-control input-sm" type="text" id="inputSmall">
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label">Input addons</label>
-                  <div class="input-group">
-                    <span class="input-group-addon">$</span>
-                    <input type="text" class="form-control">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" type="button">Button</button>
-                    </span>
-                  </div>
-                </div>
+         
               </form>
 
           </div>
         </div>
-
-        </div>
-    </div>
-
-	<script src="lib/angular/angular.js"></script><!--
--->	<script src="lib/angular/angular-route.js"></script><!--
-	<script src="lib/angular/angular-resource.js"></script>
--->	<script src="js/app.js"></script><!--
-	<script src="js/services/adsData.js"></script>
-	<script src="js/controllers/NewAdController.js"></script>
-	<script src="js/controllers/AllAdsController.js"></script>-->
-        <script type='text/javascript' src='js/controllers/MainController.js'></script>
-</body>
-</html>
-
-
+      </div>
