--- a/Ads/app/css/app.css
+++ b/Ads/app/css/app.css
@@ -1,3 +1,12 @@
+div, .container {
+    border: 1px solid black;
+}
+
 ul {
     list-style: none
+}
+
+.ad-image {
+    height: 100px;
+    width: 100px;
 }
