added towns and categories sidebars

--- a/Ads/app/templates/all-ads.html
+++ b/Ads/app/templates/all-ads.html
@@ -23,6 +23,23 @@
                 
             </ul>
         </div>
-        <div class="col-md-4">Filters</div>
+        <div class="col-md-4">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Categories</h3>
+                </div>
+                <div class="panel-body" ng-repeat="category in categories">
+                  {{category.name}}
+                </div>
+              </div>
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Towns</h3>
+                </div>
+                <div class="panel-body" ng-repeat="town in towns">
+                  {{town.name}}
+                </div>
+              </div>
+        </div>
     </div>
 </div>
