change CSS of selected sidebar town or category

--- a/Ads/app/css/app.css
+++ b/Ads/app/css/app.css
@@ -9,3 +9,12 @@ ul {
 .ad-image {    
     width: 100%;
 }
+
+
+.italic {
+    font-style: italic;
+}
+
+.selected {
+    background-color: orangered;
+}
