--- a/Ads/app/css/app.css
+++ b/Ads/app/css/app.css
@@ -1,9 +1,65 @@
-div, .container {
+* {
+    box-sizing: border-box;
+}
+
+
+
+/*div, .container {
     border: 1px solid black;
+}*/
+.row {
+    margin: 0;
+    padding: 0;
+}
+
+.ads-holder {
+    margin: 0;
+    padding: 0;    
+
+}
+
+.item {
+    background-color: #93C54B;
+    margin-bottom: 15px;
+}
+
+.user-data p {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    font-style: italic;
 }
 
 ul {
-    list-style: none
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    
+}
+
+.title {
+    margin: 0;
+    padding: 10px;
+    
+}
+
+.photo {
+    margin: 0;
+    padding: 10px;
+    
+}
+
+.text {
+    margin: 0;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.user-data {
+    margin: 0;
+    padding: 10px;
+    margin-top: 15px;
+
 }
 
 .ad-image {    
