--- a/Ads/app/templates/all-ads.html
+++ b/Ads/app/templates/all-ads.html
@@ -1,9 +1,9 @@
 <div class="jumbotron">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8 ads-holder">
             <ul>
-                <li ng-repeat="item in data.ads">
-                    <div class="container well">
+                <li class="item" ng-repeat="item in data.ads">
+                    <div class="container title">
                         <h3 class="pull-left">
                             {{item.title}}                           
                         </h3>
@@ -12,11 +12,23 @@
                             </span>
                     </div>
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-md-5 photo">
                             <img class="ad-image" src="" ng-src="{{item.imageDataUrl}}">
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-7 text">
                             {{item.text}}
+                            <div class="row">
+                                <div class="col-md-4 user-data">
+                                    <p>Name:</p>
+                                    <p>Email:</p>
+                                    <p>Phone:</p>
+                                </div>
+                                <div class="col-md-8 user-data">
+                                    <p>{{item.ownerName}}</p>
+                                    <p>{{item.ownerEmail}}</p>
+                                    <p>{{item.ownerPhone}}</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </li>
