--- a/Ads/app/css/app.css
+++ b/Ads/app/css/app.css
@@ -7,8 +7,12 @@
     border: 1px solid black;
 }*/
 
+.view {
+    min-height: 800px;
+}
+
 .wrapper {
-    margin-top: 65px;
+    margin-top: 65px;    
 }
 
 .row {
@@ -18,6 +22,7 @@
 
 .fixed-sidebar {
     position: fixed;
+    top: 80px;
     
 } 
 
@@ -113,4 +118,15 @@ a:link {
 
 a:hover {
     text-decoration: none;    
+}
+
+footer p {
+    text-align: center;
+    background-color: #A3DAA3;
+    font-weight: bold;
+    padding: 10px;
+}
+
+.title-bar a {
+    text-decoration: none;
 }
