--- a/Ads/app/templates/all-ads.html
+++ b/Ads/app/templates/all-ads.html
@@ -1,3 +1,5 @@
+
+    <div class="wrapper">  
 <div class="row">           
     <div class="col-md-9 ads-holder">
         <ul>
@@ -33,30 +35,8 @@
             </li>
         </ul>
     </div>
-    <div class="col-md-3">
-        
-        <div class="panel panel-success">
-            <div class="panel-heading">
-              <h3 class="panel-title">Categories</h3>
-            </div>
-            <div class="panel-body italic" ng-click="setSelectedCat(null)" ng-class="{selected: selectedCatId === null}">
-              All
-            </div>
-            <div class="panel-body" ng-click="setSelectedCat(category.id)" ng-class="{selected: category.id === selectedCatId}" ng-repeat="category in categories">
-              {{category.name}}
-            </div>
-          </div>
-        <div class="panel panel-success ">
-            <div class="panel-heading">
-              <h3 class="panel-title">Towns</h3>
-            </div>
-              <div class="panel-body italic" ng-click="setSelectedTown(null)" ng-class="{selected: selectedTownId === null}">
-              All
-            </div>
-            <div class="panel-body" ng-click="setSelectedTown(town.id)" ng-class="{selected: town.id === selectedTownId}" ng-repeat="town in towns">
-              {{town.name}}
-            </div>
-        </div>
-          
-    </div>
+ 
 </div>
+    </div>
+
+
