get and display towns and categories

--- a/Ads/app/templates/public-ads.html
+++ b/Ads/app/templates/public-ads.html
@@ -2,12 +2,12 @@
     <div class="row">           
         <div class=" ads-holder">
             <ul>
-                <li class="item" ng-repeat="item in data.ads">
+                <li class="item" ng-repeat="item in adsData.ads">
                     <div class="container title">
                         <h3 class="pull-left">
                             {{item.title}}                           
                         </h3>
-                            <span class="pull-right">
+                            <span class="pull-right"> 
                                    {{item.date | date: 'd-MMM-yyyy'}}
                             </span>
                     </div>
