--- a/Ads/app/templates/filters.html
+++ b/Ads/app/templates/filters.html
@@ -3,7 +3,7 @@
             <div class="panel-heading">
               <h3 class="panel-title">Categories</h3>
             </div>
-            <div class="panel-body italic" ng-click="categoryClicked(null)" ng-class="{selected: selectedCatId === null}">
+            <div class="panel-body italic" ng-click="categoryClicked()" ng-class="{selected: selectedCatId === null}">
               All
             </div>
             <div class="panel-body" ng-click="categoryClicked(category)" ng-class="{selected: category.id === selectedCatId}" ng-repeat="category in categories">
@@ -14,7 +14,7 @@
             <div class="panel-heading">
               <h3 class="panel-title">Towns</h3>
             </div>
-              <div class="panel-body italic" ng-click="townClicked(null)" ng-class="{selected: selectedTownId === null}">
+            <div class="panel-body italic" ng-click="townClicked()" ng-class="{selected: selectedTownId === null}">
               All
             </div>
             <div class="panel-body" ng-click="townClicked(town)" ng-class="{selected: town.id === selectedTownId}" ng-repeat="town in towns">
