--- a/Ads/app/templates/left-user-sidebar.html
+++ b/Ads/app/templates/left-user-sidebar.html
@@ -10,7 +10,7 @@
             <a href="#/">My Ads</a>   
         </div>
         <div class="panel-body" ng-click="setSelectedNav('newAdd')" ng-class="{selected: 'newAdd' === selectedLink}">
-            <a href="#/">Publish New Add</a>   
+            <a href="#/user/ads/publish">Publish New Add</a>   
         </div>
         <div class="panel-body" ng-click="setSelectedNav('editProfile')" ng-class="{selected: 'editProfile' === selectedLink}">
             <a href="#/">Edit Profile</a>   
