--- a/Ads/app/templates/publish-new-ad.html
+++ b/Ads/app/templates/publish-new-ad.html
@@ -1,60 +1,84 @@
-<div class="box">
-  <h2>Publish New Ad</h2>
-  <p>
-      <label for="title">Title:</label>
-      <input type="text" id="title" ng-model="adData.title" required />
-  </p>
-  <p>
-      <label for="title">Text:</label>
-      <input type="text" id="title" ng-model="adData.text" required />
-  </p>
-  <p>
-      <label for="category">Category:</label>
-      <select id="category" ng-model="adData.categoryId">
-          <option value="null">(None)</option>
-          <option ng-repeat="c in categories" value="{{c.id}}">{{c.name}}</option>
-      </select>
-  </p>
-  <!-- TODO: add “town” drop-down field -->
-  <p>
-      <a ng-click="publishAd(adData)" class="button">Publish</a>
-      <a href="#/user/ads" class="button">Cancel</a>
-  <p>
-</div>
-
-<div class="login">
+<div class="publish-ad">
     <div class="navbar navbar-default navbar-fixed-top">
            <div class="container title-bar">        
                <a href="../" class="navbar-brand">Ani's Ads - {{pageTitle}}</a>
             </div>
-    </div>
-    <div class="bs-docs-section">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="well bs-component">
-                    <form class="form-horizontal">
-                        <fieldset>
-                            <legend>Login</legend>
-                            <div class="form-group">
-                                <label for="username" class="col-lg-2 control-label">Username</label>
-                                <div class="col-lg-10">
-                                    <input type="text" class="form-control" id="username" placeholder="Username" ng-model="user.username" required>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-                                <div class="col-lg-10">
-                                    <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="user.password" required>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-lg-10 col-lg-offset-2">
-                                    <button class="btn btn-default">Cancel</button>
-                                    <button type="submit" class="btn btn-primary" ng-click="login(user)">Submit</button>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
+    </div>    
+     <div class="row">
+        <div class="col-md-2">
+            <div ng-include="'templates/left-public-sidebar.html'"  ng-if="!isLoggedIn"></div>
+            <div ng-include="'templates/left-user-sidebar.html'"  ng-if="isLoggedIn"></div>
+        </div>
+         <div class="col-md-10">
+            <div class="bs-docs-section">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="well bs-component">
+                            <form class="form-horizontal">
+                                <fieldset>
+                                    <legend>Publish New AD</legend>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <label for="title">Title:</label>                                           
+                                            </div>
+                                            <div class="col-md-10">
+                                                <input type="text" id="title" ng-model="adData.title" required />                                       
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <label for="text">Text:</label>                                           
+                                            </div>
+                                            <div class="col-md-10">
+                                                <input type="text" id="text" ng-model="adData.text" required /> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <label for="img">Image:</label>                                           
+                                            </div>
+                                            <div class="col-md-10">
+                                                <input type="text" id="img" ng-model="adData.imageDataUrl" required />
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <label for="ctgry">Category:</label>                                           
+                                            </div>
+                                            <div class="col-md-10">
+                                                <select id="ctgry" class="form-control" ng-options="category.id as category.name for category in categories" ng-model="user.categoryId" required>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <label for="ctgry">Town:</label>                                           
+                                            </div>
+                                            <div class="col-md-10">
+                                                <select class="form-control" id="town" ng-options="town.id as town.name for town in towns" ng-model="user.townId">
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>        
+                                    <div class="form-group">
+                                        <div class="col-lg-10 col-lg-offset-2">
+                                            <a href="#" class="btn btn-default">Cancel</a>
+                                            <button type="submit" class="btn btn-primary" ng-click="publishAd()">Publish</button>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
