--- a/Ads/app/templates/publish-new-ad.html
+++ b/Ads/app/templates/publish-new-ad.html
@@ -23,7 +23,7 @@
                                                 <label for="title">Title:</label>                                           
                                             </div>
                                             <div class="col-md-10">
-                                                <input type="text" id="title" ng-model="adData.title"/>                                       
+                                                <input type="text" id="title" ng-model="adData.title" required/>  
                                             </div>
                                         </div>
                                     </div>
@@ -40,11 +40,25 @@
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-md-2">
-                                                <label for="img">Image:</label>                                           
+                                                <label for="imgUel">Image:</label>                                           
                                             </div>
                                             <div class="col-md-10">
-                                                <input type="text" id="img" ng-model="adData.imageDataUrl" required />
+                                                <input type="text" id="imgUrl" ng-model="adData.imageDataUrl" required />
+                                            </div>                                            
+                                        </div>
+                                    </div>
+                                     <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <label for="image">Image:</label>                                          
                                             </div>
+                                            <div class="col-md-10">
+                                                <input type="file" id="image"
+                                                    onchange="angular.element(this).scope().fileSelected(this)" />
+                                                <div class="image-box">
+                                                    <p>Image Preview</p>
+                                                </div>
+                                            </div>                                            
                                         </div>
                                     </div>
                                     <div class="form-group">
